# battle_game_2024

./: CMakeLists.txt
src/battle_game/core/: CMakeLists.txt  selectable_units.cpp  unit.h
src/battle_game/core/units/: xrayay_tank.cpp  xrayay_tank.h
